--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@mui/material-nextjs": "^6.1.7",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "uuid": "^11.0.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^22",
