--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "2.1.5",
     "@vitest/ui": "^2.1.5",
     "eslint": "^9",
     "eslint-config-next": "15.0.3",
